--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 
-CONNECTION_URL= "mongodb+srv://MERN:MERN1234@cluster0.mlopb.mongodb.net/MERN?retryWrites=true&w=majority"
+CONNECTION_URL= "mongodb://localhost:27017/myapp"
